# Path_planner

./: README.md  start.sh
Resources/ACADO_FILES/: simple_ocp.cpp  simple_ocp_2.cpp
Resources/ark_mpc/: acado_common.h  mpc_controller.cpp
Resources/ark_mpc/Trajectory_optimsation/: simple_ocp.cpp  simple_ocp_2.cpp
Resources/trajectory_optimsation/: CMakeLists.txt  package.xml
Resources/trajectory_optimsation/include/: geometry_eigen_conversions.h  hedwig_mpc_controller.h  hedwig_mpc_params.h  mpc_wrapper.h  rpg_mpc_controller.h  rpg_mpc_params.h
Resources/trajectory_optimsation/model/: acado_integrator.c  acado_solver.c
Resources/trajectory_optimsation/src/: hedwig_mpc_controller.cpp  hedwig_mpc_wrapper.cpp  rpg_mpc_controller.cpp
src/iarc_px4_gazebo/: CMakeLists.txt  iarc_sim_run.sh  package.xml
src/iarc_px4_gazebo/launch/: integrated.launch  my.launch  one_patrolbot.launch  one_robot.launch
src/iarc_px4_gazebo/meshes/meshes_outdoor/apriltag/: model.config  model.sdf
src/iarc_px4_gazebo/meshes/meshes_outdoor/apriltag/materials/scripts/: apriltag.material
src/iarc_px4_gazebo/meshes/meshes_outdoor/bridge/: model.config  model.sdf
src/iarc_px4_gazebo/meshes/meshes_outdoor/grass_plane_marker/: model.config  model.sdf
src/iarc_px4_gazebo/meshes/meshes_outdoor/grass_plane_marker/materials/scripts/: grass_marker.material
src/iarc_px4_gazebo/models/create/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
src/iarc_px4_gazebo/models/iarc_with_walls/: wall.sdf
src/iarc_px4_gazebo/models/iris/: iris.sdf
src/iarc_px4_gazebo/models/typhoon_h480/: typhoon_h480.sdf
src/iarc_px4_gazebo/posix-configs/: typhoon_h480
src/iarc_px4_gazebo/sdf/: patrolbot.sdf  targetbot.sdf
src/iarc_px4_gazebo/src/: ContactPlugin.cc  activate.cpp  bot.cpp  groundbot.cpp  joy_controller.cc  lidar_spinner.cc
src/iarc_px4_gazebo/worlds/: bridge.world  empty.world  typhoon_h480.world  village.world
src/motion_planning/: CMakeLists.txt
src/motion_planning/src/: motionplanner.cpp  motionplanner.py  motionplanner.py~
src/motion_planning_1/: CMakeLists.txt  package.xml
src/motion_planning_1/src/: laser_to_point.py  motionplanner.py
src/px4_gaz/: CMakeLists.txt  iarc_sim_run.sh  package.xml  sim_run.sh
src/px4_gaz/launch/: Simulate.launch  drone.rviz
src/px4_gaz/models/iris/: frames.gv  iris.gazebo  iris.sdf  iris.xacro
src/px4_gaz/worlds/: empty.world
src/trajectory_optimsation/: CMakeLists.txt  package.xml
src/trajectory_optimsation/include/: geometry_eigen_conversions.h  hedwig_controller.h
src/trajectory_optimsation/model/: CMakeCache.txt  CMakeLists.txt  FindACADO.cmake  Makefile  cmake_install.cmake  model.cpp  quadrotor_model_codegen
src/trajectory_optimsation/model/hedwig_mpc_codegen/: acado_auxiliary_functions.c  acado_auxiliary_functions.h  acado_integrator.c  acado_solver.c  test  test.c
src/trajectory_optimsation/src/: geometry_eigen_conversions.cpp  hedwig_controller.cpp
